slides: some fixups before the class

--- a/slides/index.html
+++ b/slides/index.html
@@ -1088,9 +1088,9 @@
             >>> 2 / 2/2
             0.5
             >>> -2**2
-            -9
+            -4
             >>> 2**2*2
-            0.25
+            8
             >>> 3 * 2 ** 5 // 2
             48
             --></div>
@@ -1828,7 +1828,6 @@
                      data-max-lines='20'
                 >
                     <script type='text/x.ace-brython'>
-                        # Número de convidados: 42
                         # Hambúrguer por convidado: 1.5
                         # Receita
                         #   Carne Magra: 120g
@@ -1860,6 +1859,7 @@
                 <br/>
                 Basta modificar o valor da variável <code>convidados</code>
             </div>
+            <div class='fragment'></div>
         </section>
 
 
