slides: move python-hello.cast into misc/ directory

--- a/slides/index.html
+++ b/slides/index.html
@@ -177,7 +177,7 @@
                     Usando o shell do seu sistema, podemos utilizar o seguinte
                     comando: <code>python hello.py</code>
                     <asciinema-player
-                        src='python-hello.cast'
+                        src='misc/python-hello.cast'
                         autoplay
                         loop
                         rows='3'
