aula01: left to right, man...

--- a/slides/aula01.html
+++ b/slides/aula01.html
@@ -1261,7 +1261,7 @@
                 <code><strong>0.5</strong></code>
             </template>
             <template data-tag='notes'>
-                A resolução é feita da direita para a esquerda, por se tratar
+                A resolução é feita da esquerda para a direita, por se tratar
                 de dois operadores no mesmo nível de precedência
             </template>
         </template>
