--- a/slides/aula02.html
+++ b/slides/aula02.html
@@ -1172,6 +1172,270 @@
             Python faz a "conversão" no momento de verificar a condição)
           </p>
         </section>
+
+
+
+        <section data-auto-animate>
+          <h3>Valores booleanos</h3>
+          <p style='font-style: italic;'>É 8 ou 80...</p>
+        </section>
+
+
+
+        <section data-auto-animate>
+          <h3>Valores booleanos</h3>
+          <p>Valores booleanos admitem apenas dois possíveis valores:</p>
+          <div class='python-repl'><!--
+          >>> True
+          True
+          >>> False
+          False
+          --></div>
+        </section>
+
+
+
+        <section data-auto-animate>
+          <h3>Expressões booleanas</h3>
+
+          <p>Python possui diversos operadores de <strong>comparação</strong></p>
+
+          <p>Os resultados das comparações são do tipo <code>bool</code></p>
+          <div class='python-repl'><!--
+          >>> imc(120, 1.9) < 30
+          False
+          >>> len('Gustavo') == 7
+          True
+          >>> 2 >= 1
+          True
+          --></div>
+        </section>
+
+
+        <section data-auto-animate data-reusable>
+          <h3>Expressões booleanas</h3>
+
+          <div style='font-size: .8em; text-align: left; margin-bottom: 1ex;' data-reusable-tag='title'>
+            <code>==</code> → Igualdade
+            <br/>
+            <code>!=</code> → Diferença
+          </div>
+
+          <div data-reusable-tag='code'>
+            <div class='python-repl'><!--
+            >>> 3 == 8
+            False
+            >>> 81 == 9**2
+            True
+            >>> 'Dracula' == 'Edward'
+            False
+            >>> 1 != 1.0
+            False
+            >>> 450 != '450'
+            True
+            --></div>
+          </div>
+        </section>
+
+
+        <section data-auto-animate>
+          <h3>Expressões booleanas</h3>
+
+          <p>Note que <code>==</code> e <code>=</code> possuem
+          <strong>significados diferentes</strong>:</p>
+
+          <div class='python-repl'><!--
+          >>> x = 98
+          >>> x = x + 1  # Incrementando o valor de x
+          >>> x
+          99
+          --></div>
+
+          <br />
+
+          <div class='python-repl'><!--
+          >>> x = 98
+          >>> x == x + 1  # Comparando 98 com 99
+          False
+          >>> x
+          98
+          --></div>
+        </section>
+
+
+        <template data-reuse>
+          <template data-tag='title'>
+            <code>&lt;</code>
+            <code>&lt;=</code>
+            <code>&gt;</code>
+            <code>&gt;=</code>
+            → Desigualdades
+          </template>
+
+          <template data-tag='code'>
+            <div class='python-repl'><!--
+            >>> abs(-2) >= 1
+            True
+            >>> 10 >= 10
+            True
+            >>> 10 > 10
+            False
+            >>> 87 ** .5 < 9
+            False
+            >>> 80 ** .5 < 9
+            True
+            --></div>
+          </template>
+        </template>
+
+
+
+        <template data-reuse>
+          <template data-tag='title'>
+            <code>and</code>
+            <code>or</code>
+            → Operadores binários booleanos
+          </template>
+
+          <template data-tag='code'>
+            <div class='python-repl'><!--
+            >>> abs(-2) >= 1 and 'Alice' + 'Robert' == 'Love'
+            False
+            >>> abs(-2) >= 1 or 'Alice' + 'Robert' == 'Love'
+            True
+            --></div>
+
+            <div class='python-repl' style='margin-top: 1em;'><!--
+            >>> False and print('hello') # Early stop
+            False
+            >>> True or print('hello') # Early stop
+            True
+            >>> True and print('hello') # Agora print é executado
+            hello
+            >>> False or print('hello') # Agora print é executado
+            hello
+            --></div>
+          </template>
+        </template>
+
+
+
+        <template data-reuse>
+          <template data-tag='title'>
+            <code>not</code>
+            → Operador de negação
+          </template>
+
+          <template data-tag='code'>
+            <div class='python-repl'><!--
+            >>> not len('Alice') > 5
+            True
+            >>> not True
+            False
+            >>> not not True  # Dupla negação
+            True
+            --></div>
+          </template>
+        </template>
+
+
+
+        <section data-auto-animate>
+          <h3>Valores "Truthy" e "Falsey"</h3>
+
+          <p>
+          A função <code>bool()</code> converte valores para o tipo
+          <code>bool</code>.
+          </p>
+
+          <div class='python-repl'><!--
+          >>> bool(0)  # Zero é falsey
+          False
+          >>> bool(0.1)  # Qualquer número diferente de zero é truthy
+          True
+          >>> bool(45)
+          True
+          >>> bool("")  # A string vazia
+          False
+          >>> bool("uma string não vazia")
+          True
+          >>> bool("  ")  # Uma string com espaços em brancos não é vazia
+          True
+          --></div>
+
+        </section>
+
+        <section data-auto-animate>
+          <h3>Valores "Truthy" e "Falsey"</h3>
+
+          <p>Esta conversão é implicitamente realizada por Python em lugares
+          onde se espera um <code>bool</code>:</p>
+
+          <div class='ace-brython' style='font-size: .5em;'>
+            <script type='text/x.ace-brython'>
+              nome = 'Bilbo'
+              sobrenome = ''
+
+              if nome:
+                  print('Olá, ' + nome)
+
+                  if sobrenome:
+                      print('Já sei tudo sobre você, ' + nome + ' ' + sobrenome)
+                  else:
+                      print('Qual é seu sobrenome?')
+
+              else:
+                  print('Olá, desconhecido')
+                  print('Qual é o seu nome?')
+            </script>
+          </div>
+        </section>
+
+
+
+        <section data-auto-animate>
+          <h3>Expressões Booleanas</h3>
+
+          <p style='font-size: .7em'> Os operadores booleanos nos ajudam a
+          escrever condições mais expressivas: </p>
+
+          <div style='display: flex; flex-direction: column;'>
+            <div style='flex: 1'>
+              <p style='font-size: .7em;'>Sem operadores booleanos: </p>
+              <div
+                class='ace-brython' style='font-size: .5em;'
+                data-readonly
+                data-components='code'
+              >
+                <script type='text/x.ace-brython'>
+                  def ano_eh_bissexto(ano):
+                      if ano % 400 == 0:
+                        return True
+                      elif ano % 4 == 0:
+                        if ano % 100 != 0:
+                          return True
+                      return False
+                </script>
+              </div>
+            </div>
+
+            <div class='fragment' style='flex: 1'>
+              <p style='font-size: .7em;'>Com operadores booleanos: </p>
+              <div
+                class='ace-brython' style='font-size: .5em;'
+                data-readonly
+                data-components='code'
+              >
+                <script type='text/x.ace-brython'>
+                  def ano_eh_bissexto(ano):
+                      if ano % 400 == 0 or (ano % 4 == 0 and ano % 100 != 0):
+                        return True
+                      return False
+                </script>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
     </div>
 
